fix option mobile version style

--- a/src/assets/scss/product.scss
+++ b/src/assets/scss/product.scss
@@ -476,7 +476,7 @@
     padding: 13px 17px;
     border: 1px solid #ddd;
     background: #fff;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     color: #666;
